# cosmosdr

./: README.md  pyproject.toml
cosmosdr/: __init__.py  app.py  config.py  main.py  plane_sailing.py  plotting.py  signal_acquisition.py  signal_processing.py
tests/: test_acquisition.py
